fixed bug with button spacing in navbar

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -46,6 +46,9 @@ nav {
   display: inline-block;
   float: right;
   position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-right: 20px;
 }
 
 
@@ -79,9 +82,12 @@ input {
 }
 
 button, input[type="submit"] {
-  margin-top: 20px;
   color: #2C2C2C;
   background-color: #DC7143;
+}
+
+.container button, .container input[type="submit"] {
+  margin-top: 20px;
 }
 
 input[type="radio"] {
